--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,8 @@ services:
     ports:
       - "3306:3306"
     volumes:
-      - ./datadir:/var/lib/mysql  
+      - ./datadir:/var/lib/mysql
+      - ./init-user.sql:/docker-entrypoint-initdb.d/init-user.sql
   
   adminer:
     image: adminer
